increase in percentage of dog detection

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -226,6 +226,8 @@
     "\n",
     "## TODO: Test the performance of the face_detector algorithm \n",
     "## on the images in human_files_short and dog_files_short.\n",
+    "\n",
+    "%%time\n",
     "\n",
     "def human_perc(folder_path):\n",
     "    count = 0\n",
@@ -253,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -392,6 +394,8 @@
     "# Set PIL to be tolerant of image files that are truncated.\n",
     "from PIL import ImageFile\n",
     "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
+    "\n",
+    "%timeit\n",
     "\n",
     "def VGG16_predict(img_path):\n",
     "    '''\n",
@@ -418,10 +422,13 @@
     "    \n",
     "    vgg = models.vgg16(pretrained=True)    \n",
     "    img = Image.open(img_path)    \n",
-    "    vgg_transform = transforms.Compose([transforms.RandomResizedCrop(32),\n",
-    "                                     transforms.ToTensor(),\n",
-    "                                     transforms.Normalize([0.5,0.5,0.5],\n",
-    "                                                         [0.5,0.5,0.5])])\n",
+    "    vgg_transform = transforms.Compose([transforms.RandomResizedCrop(size=256, scale=(0.8, 1.0)),\n",
+    "                                        transforms.RandomRotation(degrees=15),\n",
+    "                                        transforms.RandomHorizontalFlip(),\n",
+    "                                        transforms.CenterCrop(size=224),\n",
+    "                                        transforms.ToTensor(),\n",
+    "                                        transforms.Normalize([0.485, 0.456, 0.406],\n",
+    "                                                             [0.229, 0.224, 0.225])])\n",
     "    \n",
     "    img_t = vgg_transform(img)    \n",
     "    batch_t = torch.unsqueeze(img_t, 0)    \n",
@@ -451,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +467,7 @@
        "tensor([True])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +481,7 @@
     "    \n",
     "    return dog_face <=  268  and dog_face >=  151\n",
     "\n",
-    "dog = dog_detector(dog_files_short[0])\n",
+    "dog = dog_detector(dog_files_short[0].item())\n",
     "dog\n",
     "    "
    ]
@@ -499,25 +506,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n",
+      "3.0 percentage of the images in human_files_short have a dog\n",
+      "94.0 percentage of the images in dog_files_short have a dog\n"
+     ]
+    }
+   ],
    "source": [
     "### TODO: Test the performance of the dog_detector function\n",
     "### on the images in human_files_short and dog_files_short.\n",
-    "# %time\n",
-    "# def dog_perc(folder_path):\n",
-    "#     count = 0\n",
-    "#     for path in folder_path:\n",
-    "#         if(dog_detector(path)):\n",
-    "#             count +=1\n",
-    "#             percentage = (count/len(folder_path)) * 100            \n",
-    "#     return percentage\n",
     "\n",
-    "# _percentage = dog_perc(human_files_short)\n",
-    "# print('{} percentage of the images in human_files_short have a dog'.format(str(_percentage)))\n",
-    "# _human_percentage = dog_perc(dog_files_short)\n",
-    "# print('{} percentage of the images in dog_files_short have a dog'.format(str(_human_percentage)))\n"
+    "%time\n",
+    "\n",
+    "def dog_perc(folder_path):\n",
+    "    count = 0\n",
+    "    for path in folder_path:\n",
+    "        if(dog_detector(path)):\n",
+    "            count +=1\n",
+    "            percentage = (count/len(folder_path)) * 100            \n",
+    "    return percentage\n",
+    "\n",
+    "_percentage = dog_perc(human_files_short)\n",
+    "print('{} percentage of the images in human_files_short have a dog'.format(str(_percentage)))\n",
+    "_human_percentage = dog_perc(dog_files_short)\n",
+    "print('{} percentage of the images in dog_files_short have a dog'.format(str(_human_percentage)))\n"
    ]
   },
   {
@@ -1192,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,10 +1225,13 @@
     "def predict_breed_transfer(img_path):\n",
     "    vgg = models.vgg16(pretrained=True)\n",
     "    img = Image.open(img_path)    \n",
-    "    vgg_transform = transforms.Compose([transforms.Resize(256),\n",
-    "                                    transforms.CenterCrop(224),\n",
-    "                                    transforms.ToTensor(),\n",
-    "                                    transforms.Normalize(mean=[0.485, 0.456, 0.406],std=[0.229, 0.224, 0.225])])\n",
+    "    vgg_transform = transforms.Compose([transforms.RandomResizedCrop(size=256, scale=(0.8, 1.0)),\n",
+    "                                        transforms.RandomRotation(degrees=15),\n",
+    "                                        transforms.RandomHorizontalFlip(),\n",
+    "                                        transforms.CenterCrop(size=224),\n",
+    "                                        transforms.ToTensor(),\n",
+    "                                        transforms.Normalize([0.485, 0.456, 0.406],\n",
+    "                                                             [0.229, 0.224, 0.225])])\n",
     "    \n",
     "    img_t = vgg_transform(img)    \n",
     "    batch_t = torch.unsqueeze(img_t, 0)    \n",
@@ -1245,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1300,15 +1322,16 @@
      "output_type": "stream",
      "text": [
       "Hello human!\n",
-      "You look like a ... 0\n",
+      "You look like a ... 683\n",
       "Hello human!\n",
-      "You look like a ... 862\n",
+      "You look like a ... 452\n",
       "Neither dog nor Human!\n",
       "Hello dog!\n",
       "You look like a ... 252\n",
       "Hello dog!\n",
       "You look like a ... 252\n",
-      "Neither dog nor Human!\n"
+      "Hello dog!\n",
+      "You look like a ... 192\n"
      ]
     }
    ],
